--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+
     runtime "org.slf4j:slf4j-simple:1.7.12"
     compile "com.heroku.sdk:heroku-jdbc:0.1.1"
 
@@ -34,7 +35,9 @@ dependencies {
 
     // ORM - Hibernate
     compile "org.hibernate:hibernate-core:5.2.0.Final"
-    compile 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.2.2.Final'
+
 
     // J2HTML
     compile group: 'com.j2html', name: 'j2html', version: '0.7'
