--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,17 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'java'
+//agregar el plugin de aplicación.
+apply plugin: 'application'
+
 group 'com.ProgWeb'
 version '1.0-SNAPSHOT'
-
 sourceCompatibility = 1.8
+
+mainClassName = "main.Main"
+
+defaultTasks 'run'
 
 repositories {
     mavenCentral()
@@ -57,4 +64,16 @@ dependencies {
 
     //Gson
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "$mainClassName"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
+    archiveName "app.jar"
 }
