--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ group 'com.ProgWeb'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
-mainClassName = "main.Main"
+mainClassName = "Main"
 
 defaultTasks 'run'
 
